@@ -1,5 +1,7 @@
 1.7
 	- asymmetric rekeying behaviour, so hosts don't rekey simultaneously.
+        - new option --enable-static-daemon.
+        - fix configure --help output.
 
 1.6.1 Wed May 12 14:48:20 CEST 2004
 	- fix -c switch that has been broken due to a last-minute fix
